--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -33,7 +33,7 @@ body {
 /* Page Sections */
 .section,
 .section-colored {
-  padding: 45px 0px;
+  padding: 50px 0px 0px 0px;
 }
 
 .section-colored {
